--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint .",
     "start": "nodemon ./bin/www",
-    "start:test": "PORT=3030 MONGODB_URL='mongodb://0.0.0.0/acebook_test' npm start",
+    "start:test": "PORT=3030 MONGODB_URL='mongodb://0.0.0.0/instagram_test' npm start",
     "test": "npm run lint && npm run test:unit && npm run test:integration",
     "test:unit": "jest",
     "test:integration": "cypress run"
@@ -16,6 +16,7 @@
     "node": ">=18.1.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -26,7 +27,10 @@
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.11",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.15"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.15",
+    "sharp": "^0.30.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "cypress": "^9.5.1",
