--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "body-parser": "^1.20.0",
+    "cloudinary": "^1.30.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "hbs": "^4.1.0",
